removing immutable
Signed-off-by: Joshua Palis <jpalis@amazon.com>